--- a/README.textile
+++ b/README.textile
@@ -1,28 +1,36 @@
 h1. Adds Passenger Monitoring to Server Density
 
-Installation
+h2. Installation
 
 * Head to  https://youraccount.serverdensity.com/plugins/ and Add new plugin
 * Add a plugin called Passenger
-* Edit the Passenger plugin and enter these groups for the graphs:
+* Edit the Passenger plugin and enter the groups below for the graphs
+* Configure your agent so that it knows about plugins http://www.serverdensity.com/docs/agent/plugins/ 
+* Move Passenger.py into that directory 
+* Restart the agent (service sd-agent restart)
 
+h2. Plugin Groups
+
+<pre>
 Title: Status
 max_application_instances
 count_application_instances
 active_application_instances
 inactive_application_instances
 waiting_on_global_queue
+</pre>
 
+<pre>
 Title: Processes
 processes
+</pre>
 
+<pre>
 Title: Memory
 passenger_watchdog_rss_mb
 passenger_helper_agent_rss_mb
 passenger_spawn_server_rss_mb
 passenger_login_agent_rss_mb
 total_private_dirty_rss_mb
+</pre>
 
-* Configure your agent so that it knows about plugins http://www.serverdensity.com/docs/agent/plugins/ 
-* Move Passenger.py into that directory 
-* Restart the agent (service sd-agent restart)
